--- a/Ved-Organic/Ved-Organic.csproj
+++ b/Ved-Organic/Ved-Organic.csproj
@@ -5,4 +5,11 @@
     <RootNamespace>Ved_Organic</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
+  </ItemGroup>
+
 </Project>
