--- a/Ved-Organic/appsettings.json
+++ b/Ved-Organic/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-2NF25G8;Initial catalog=Ved_Organic;User ID=sa;Password=hcs1237;Trusted_Connection=True;"
+  }
 }
