--- a/Ved-Organic/appsettings.json
+++ b/Ved-Organic/appsettings.json
@@ -7,7 +7,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "Neha",
+    "Issuer": "Neha.com"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2NF25G8;Initial catalog=Ved_Organic;User ID=sa;Password=hcs1237;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-2NF25G8;Database=Ved;Integrated Security=True;"
   }
 }
